--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/detalle-factura-proyectos-asociados/detalle-factura-proyectos-asociados.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/detalle-factura-proyectos-asociados/detalle-factura-proyectos-asociados.component.html
@@ -122,7 +122,7 @@
                         </mat-card-title>
                     </mat-card-header>
                     <mat-card-content style="text-align: left;" [formGroup]="project">
-                        <p><strong>Monto máximo a pagar en el proyecto:</strong> $30.000.000</p>
+                        <p><strong>Monto máximo a pagar en el proyecto:</strong> </p>
                         <p><strong>Monto pendiente a pagar en el proyecto:</strong> $30.000.000</p>
                         <br>
                         <div class="row">
