--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/ver-detalle-editar-expensas/ver-detalle-editar-expensas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/ver-detalle-editar-expensas/ver-detalle-editar-expensas.component.html
@@ -33,7 +33,7 @@
                     Lista de chequeo
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <app-form-listachequeo-expensas></app-form-listachequeo-expensas>
+            <app-validar-lista-chequeo [solicitudPago]="solicitudPago"></app-validar-lista-chequeo>
         </mat-expansion-panel>
     </mat-accordion>
     <mat-accordion>
