--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-solicitud-expensas/form-solicitud-expensas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-solicitud-expensas/form-solicitud-expensas.component.html
@@ -11,11 +11,9 @@
             <p><strong>Número de factura:</strong> {{ addressForm.get( 'numeroFactura' ).value }} </p>
             <p><strong>Valor facturado:</strong> ${{ addressForm.get( 'valorFacturado' ).value | currency:'
                 ':'symbol-narrow':'.0-0' }} </p>
-            <p><strong>Tipo de pago:</strong> {{ addressForm.get( 'tipoPago' ).value.nombre }} </p>
-            <p><strong>Concepto de pago para el criterio:</strong> {{ addressForm.get( 'conceptoPagoCriterio'
-                ).value.nombre }} </p>
-            <p><strong>Valor facturado al concepto:</strong> ${{ addressForm.get( 'valorFacturadoConcepto' ).value |
-                currency:' ':'symbol-narrow':'.0-0' }} </p>
+            <p *ngIf="addressForm.get( 'tipoPago' ).value !== null"><strong>Tipo de pago:</strong> {{ addressForm.get( 'tipoPago' ).value.nombre }} </p>
+            <p *ngIf="addressForm.get( 'conceptoPagoCriterio' ).value !== null"><strong>Concepto de pago para el criterio:</strong> {{ addressForm.get( 'conceptoPagoCriterio' ).value.nombre }} </p>
+            <p><strong>Valor facturado al concepto:</strong> ${{ addressForm.get( 'valorFacturadoConcepto' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
         </mat-card-content>
     </mat-card>
 </ng-container>
