--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/ver-detalle-expensas/ver-detalle-expensas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/ver-detalle-expensas/ver-detalle-expensas.component.html
@@ -18,17 +18,18 @@
     <mat-accordion>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title en-alerta">
+                <mat-panel-title class="expansion-style--title">
                     Lista de chequeo
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
+            <app-validar-lista-chequeo [solicitudPago]="solicitudPago" [esVerDetalle]="true"></app-validar-lista-chequeo>
         </mat-expansion-panel>
     </mat-accordion>
     <mat-accordion>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title ">
+                <mat-panel-title class="expansion-style--title">
                    Soporte de la solicitud
                 </mat-panel-title>
             </mat-expansion-panel-header>
